--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "augustus"
 version = "0.0.1"
-authors = ["Andrew Hodges <betawaffle@gmail.com>", "Nathan LaFreniere"]
+authors = ["Andrew Hodges <betawaffle@gmail.com>", "Nathan LaFreniere <quitlahok@gmail.com>"]
 
 [dependencies]
